<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/color_app">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="235dp" app:srcCompat="@drawable/mini_podstavka"
                    android:id="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="328dp"/>
            <TextView
                    android:text="@string/hAdress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="264dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
                    android:textColor="@color/white" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="20sp" android:textColor="@color/grey"/>
            <TextView
                    android:text="@string/hContacts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="380dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
                    android:textColor="@color/white" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="20sp" android:textColor="@color/grey"/>
            <TextView
                    android:text="@string/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="20sp" android:textColor="@color/grey"/>
            <TextView
                    android:text="@string/vk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="20sp" android:textColor="@color/grey"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>