<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app">

    <TextView
        android:id="@+id/enter_personal_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/personal_info"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:errorTextAppearance="@style/error_appearance"
        android:textColorHint="@color/color_hint"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_personal_info"
        app:layout_constraintVertical_bias="0.02">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:errorTextAppearance="@style/error_appearance"
        android:textColorHint="@color/color_hint"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_input_layout"
        app:layout_constraintVertical_bias="0.04">

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="number"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_hint"
            app:mask="+7 (###) ###-##-##"
            app:notMaskedSymbol="#"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:errorTextAppearance="@style/error_appearance"
        android:textColorHint="@color/color_hint"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_input_layout"
        app:layout_constraintVertical_bias="0.08">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_hint"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/your_bron"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/table"
        android:textColor="@color/color_hint"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.70"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/selected_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="4 места, у окна, диваны"
        android:textColor="@color/color_hint"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.74"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/data"
        android:textColor="@color/color_hint"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="7 марта"
        android:textColor="@color/color_hint"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.86"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/time"
        android:textColor="@color/color_hint"
        android:textSize="12sp"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/selected_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="16:30 - 19:30"
        android:textColor="@color/color_hint"
        android:textSize="16sp"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.86"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:background="@drawable/table_shape"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

</android.support.constraint.ConstraintLayout>